# agentkitforge-app

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_PROCESS.md  SECURITY.md  SECURITY_CI_POLICY.md  VERSIONING.md  index.html  package-lock.json  package.json  release-please-config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: SECURITY_CI_POLICY.md  codeql.yml  release-artifacts.yml  release-please.yml  security.yml  smoke.yml
docs/: PLATFORM_TESTING.md  PORTABILITY.md  UPDATES.md
scripts/: build-backend.mjs  check-backend.mjs  check-tauri-sidecar.mjs  finalize-macos-release-artifacts.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/backend/: agent-kit-app-support.mjs  build-agent-kit-context.mjs  create-agent-kit.mjs  export-agent-kit-claude-code.mjs  export-agent-kit-codex.mjs  export-agent-kit-onefile.mjs  generate-agent-kit-draft.mjs  package-agent-kit.mjs  prepared-prompts.mjs  render-agent-kit-draft.mjs  render-generated-agent-kit-draft.mjs  security-utils.mjs  validate-agent-kit.mjs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_providers.rs  lib.rs  main.rs  openai_runtime.rs  security.rs  settings.rs
tests/: backend-provider-resolution.test.mjs  domain-config.test.mjs
