[package]
name = "agentkitforge-app"
version = "0.1.0"
description = "AgentKitForge desktop application"
authors = ["AgentKitForge"]
edition = "2021"

[lib]
name = "agentkitforge_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
